# AI-Career-Risk-Analytics

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: pages.yml  tests.yml
dashboard/: dashboard_data.json  index.html
data/processed/: job_skills.csv  jobs_clean.csv  occupation_risk_scores.csv  salary_history.csv  skill_salary_metrics.csv  skill_value_ranking.csv  student_simulator_demo.csv
data/raw/: jobs_sample.csv
data/reference/: major_skill_map.csv  occupation_reference.csv
data/warehouse/: career_risk.duckdb
docs/: report.md
polars_pipeline/: __init__.py  clean_jobs.py  config.py  dashboard.py  reporting.py  risk_model.py  warehouse.py
scripts/: download_sources.py  make_sample_data.py  run_pipeline.py  upload_to_github.ps1
sql/: analysis.sql  schema.sql
tests/: test_risk_model.py
